# lightbooru

./: Cargo.toml  PLAN.md  README.md
crates/booru-core/: Cargo.toml
crates/booru-core/src/: alias.rs  config.rs  edit.rs  error.rs  hash.rs  lib.rs  metadata.rs  path.rs  scan.rs
crates/booru-gtk/: Cargo.toml  build.rs
crates/booru-gtk/src/: main.rs  style.css  ui.rs
crates/booru-gtk/src/ui/: build.rs  grid_cell.blp  image_loader.rs  main.blp  tag_chip.blp  view.rs
crates/booru-tui/: Cargo.toml
crates/booru-tui/src/: main.rs
crates/booru-web/: Cargo.toml
crates/booru-web/src/: main.rs
crates/booru-web/templates/: index.html  item.html
crates/booructl/: Cargo.toml
crates/booructl/src/: main.rs
