[workspace]
resolver = "2"
members = [
  "crates/booru-core",
  "crates/booructl",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "1"
image = "0.24"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "5"
imagehash = "0.3.0"
