[workspace]
resolver = "2"
members = [
  "crates/booru-core",
  "crates/booructl",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "1"
image = "0.24"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
dirs = "5"
imagehash = "0.3.0"
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
xdg = "2"
indicatif = { version = "0.17", features = ["rayon"] }
