[workspace]
resolver = "2"
members = [
  "crates/booru-core",
  "crates/booructl",
  "crates/booru-tui",
]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
thiserror = "1"
image = "0.25"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
dirs = "5"
imagehash = { git = "https://github.com/takebayashi/imagehash-rs", rev = "8dc847e3b19f8616ef3e5e5b1634b33a308cf391" }
rayon = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
xdg = "2"
indicatif = { version = "0.17", features = ["rayon"] }
chrono = { version = "0.4", features = ["clock"] }
ratatui = "0.30.0"
crossterm = "0.29"
ratatui-image = "10.0.5"
