[package]
name = "booru-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
walkdir.workspace = true
thiserror.workspace = true
image.workspace = true
imagehash.workspace = true
dirs.workspace = true
rayon.workspace = true
rusqlite.workspace = true
xdg.workspace = true
