[package]
name = "booru-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
ratatui-image.workspace = true
image.workspace = true
booru-core = { path = "../booru-core" }
