[package]
name = "booru-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.7"
askama = "0.12"
booru-core = { path = "../booru-core" }
clap.workspace = true
mime_guess = "2"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
urlencoding = "2"
