[package]
name = "booructl"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
anyhow.workspace = true
serde_json.workspace = true
indicatif.workspace = true
booru-core = { path = "../booru-core" }
